[package]
name = "pg_turret"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_turret"
path = "./src/bin/pgrx_embed.rs"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[features]
default = ["pg13", "std"]
std = []
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
kafka = { version = "0.6", default-features = false, features = [] }
openssl = "0.10"
pgrx = "=0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "deflate"] }
flume = "0.11"
regex = "1.10"
once_cell = "1.19"
flate2 = "1.0"
tungstenite = { version = "0.22", default-features = false, features = ["__rustls-tls", "handshake"] }
url = "2.5"
sentry = { version = "0.34", default-features = false, features = ["reqwest", "rustls"] }

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
